cmake_minimum_required(VERSION 3.30)
project(LeetCode_EveryDay)

set(CMAKE_CXX_STANDARD 14)

add_executable(LeetCode_EveryDay
    20241213/20241213_2593_Heap.cpp
    20241213/20241213_2593_Sort.cpp
    20241214/20241214_2762.cpp
    20241215/20241215_1792.cpp
    20241216/20241216_3264.cpp
    20241216/20241216_3264_Heap_Beats_100.cpp
    20241217/20241217_2182.cpp)
